--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,10 @@
 nav {
     background-color: $nav-bg-color;
     display: flex;
+    align-items: center;
+    height: 5rem;
+    padding: 1rem;
+    justify-content: space-around;
     ul {
         list-style-type: none;
         display: flex;
